[project]
name = "10k-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.111.0",
    "beautifulsoup4>=4.15.0",
    "duckduckgo-search>=8.1.1",
    "langchain>=1.3.9",
    "langchain-anthropic>=1.4.6",
    "langchain-community>=0.4.2",
    "langchain-postgres>=0.0.17",
    "lxml>=6.1.1",
    "pandas>=3.0.3",
    "pgvector>=0.2.5,<0.4",
    "psycopg2-binary>=2.9.12",
    "requests>=2.34.2",
    "voyageai>=0.4.1",
]
